making discriminator function
rnn with Relu activation function

--- a/Intro GAN with MNIST/Ejemplo 1 GAN MNIST.ipynb
+++ b/Intro GAN with MNIST/Ejemplo 1 GAN MNIST.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,22 +111,39 @@
     "        hidden1 = tf.maximum(alpha*hidden1, hidden1)\n",
     "        hidden2 = tf.layers.dense(inputs=hidden1, units=128)\n",
     "        \n",
-    "        hidden2 = tf.ma"
+    "        hidden2 = tf.maximum(alpha*hidden2, hidden2)\n",
+    "        output = tf.layers.dense(hidden2, units=784, activation=tf.nn.tanh)\n",
+    "        return output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Discriminator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "def discriminator(X, reuse=None):\n",
+    "    with tf.variable_scope('dis',reuse=reuse):\n",
+    "        hidden1 = tf.layers.dense(inputs=X, units=128)\n",
+    "        # Leaky Relu\n",
+    "        alpha = 0.01\n",
+    "        hidden1 = tf.maximum(alpha*hidden1, hidden1)\n",
+    "        \n",
+    "        hidden2 = tf.layers.dense(inputs=hidden1, units=128)\n",
+    "        hidden2 = tf.maximum(alpha*hidden2, hidden2)\n",
+    "        \n",
+    "        logits = tf.layers.dense(hidden2, units=1)\n",
+    "        output = tf.sigmoid(logits)\n",
+    "        \n",
+    "        return output, logits"
+   ]
   },
   {
    "cell_type": "code",
