--- a/Intro GAN with MNIST/Ejemplo 1 GAN MNIST.ipynb
+++ b/Intro GAN with MNIST/Ejemplo 1 GAN MNIST.ipynb
@@ -365,7 +365,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    \n",
+    "    sess.run(init)\n",
+    "    \n",
+    "    # Recall an epoch is an entire run through the training data\n",
+    "    for e in range(epochs):\n",
+    "        # indicates classic division\n",
+    "        num_batches = mnist.train.num_examples // batch_size\n",
+    "        \n",
+    "        for i in range(num_batches):\n",
+    "            \n",
+    "            # Grab batch of images\n",
+    "            batch = mnist.train.next_batch(batch_size)\n",
+    "            \n",
+    "            # Get images, reshape and rescale to pass to D\n",
+    "            batch_images = batch[0].reshape((batch_size, 784))\n",
+    "            batch_images = batch_images*2 -1\n",
+    "            \n",
+    "            # Z (random latent noise data for Generator)\n",
+    "            # -1 to 1 because of tanh activation\n",
+    "            batch_z = np.random.uniform(-1, 1, size=(batch_size, 100))\n",
+    "            \n",
+    "            # Run optimizers, no need to save outputs, we won't use them\n",
+    "            _ = sess.run(D_trainer, feed_dict={real_images: batch_images, z: batch_z})\n",
+    "            _ = sess.run(G_trainer, feed_dict={z: batch_z})\n",
+    "            \n",
+    "        print(\"Currently on Epoch {} of {} total...\".format(e+1, epochs))\n",
+    "        \n",
+    "        # Sample from generator as we're training for viewing afterwards\n",
+    "        sample_z = np.random.uniform(-1, 1, size=(1, 100))\n",
+    "        gen_sample = sess.run(generator(z , reuse=True), feed_dict={z: sample_z})\n",
+    "        \n",
+    "        samples.append(gen_sample)\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
